# apt_proxy

./: .gitignore  Cargo.toml  config.yaml
benches/: cache_bench.rs
src/: cache.rs  cache_manager.rs  cache_policy.rs  config.rs  download.rs  download_manager.rs  downloader.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  server.rs  storage.rs  utils.rs
systemd/: apt-cacher-rs.service  apt-cacher-rs.socket
tests/: cache.rs  cache_tests.rs  config.rs  config_tests.rs  download.rs  download_tests.rs  edge_case_tests.rs  error_tests.rs  extended_cache_tests.rs  integration_tests.rs  server_tests.rs  utils_tests.rs
tests/common/: mod.rs
tests/helpers/: assertions.rs  file_utils.rs  fixtures.rs  mock_server.rs  mod.rs
