[package]
name = "apt-cacher-rs"
version = "3.1.3"
edition = "2024"
description = "A high-performance caching proxy for APT repositories"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "sync", "signal", "macros", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "2"
figment = { version = "0.10", features = ["yaml", "env"] }
clap = { version = "4", features = ["derive", "env"] }
humantime-serde = "1"
bytesize = { version = "1", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
blake3 = "1"
regex = "1"
path-clean = "1"
anyhow = "1"
thiserror = "2"
percent-encoding = "2"
async-stream = "0.3"
listenfd = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Karim Zabbarov <yolkis@inbox.ru>"
extended-description = "A lightweight, high-performance caching proxy for APT repositories written in Rust."
section = "net"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/apt-cacher-rs", "usr/bin/apt-cacher-rs", "755"],
    ["config.yaml", "etc/apt-cacher/config.yaml", "644"],
]
conf-files = ["/etc/apt-cacher/config.yaml"]

[package.metadata.deb.systemd-units]
unit-name = "apt-cacher-rs"
enable = true
start = true